--- a/gmail-indicator.desktop
+++ b/gmail-indicator.desktop
@@ -5,3 +5,4 @@ Name=Gmail Indicator
 Icon=applications-email-panel
 Exec=gmail-indicator
 Comment=Application to drive panel icon indicator and output notifications for new Google Mail messages.
+Categories=GNOME;GTK;Email;Network;
